<resources>
    <string name="app_name">HackerNewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top">TOP</string>
    <string name="the_best">THE BEST</string>
    <string name="new_news">NEW</string>
    <string name="news">News</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="score">Score</string>
    <string name="name_of_news">Name of news</string>
    <string name="author">Author</string>
    <string name="time_of_publication">Time of publication</string>
    <string name="number_of_comments">Number of comments</string>
    <string name="share">share</string>
    <string name="like">like</string>
    <string name="person">person</string>
</resources>